# alg_structs

./: .gitignore  CHANGES  README.org  alg.install  alg.opam  alg.qcheck.opam  alg_structs.opam  alg_structs_qcheck.opam  dune-project  index.html
.circleci/: config.yml
alg-qcheck/: alg_qcheck.ml  dune
alg-structs-qcheck/: alg_structs_qcheck.ml  dune  foldable.ml  utils.ml
alg_structs/Alg_structs/: index.html
alg_structs/Alg_structs/Applicative/: index.html
alg_structs/Alg_structs/NonEmptyList/: index.html
alg_structs/Alg_structs/Semigroup/: index.html
alg_structs/Alg_structs__/: index.html
alg_structs/Alg_structs__/Traversable/: index.html
alg_structs/Alg_structs__/Triv/: index.html
alg_structs/Alg_structs__Applicative/Make/: index.html
alg_structs/Alg_structs__Applicative/Option/: index.html
alg_structs/Alg_structs__Foldable/Array/: index.html
alg_structs/Alg_structs__Foldable/Law/: index.html
alg_structs/Alg_structs__Foldable/module-type-S/: index.html
alg_structs/Alg_structs__Functor/: index.html
alg_structs/Alg_structs__Functor/Array/: index.html
alg_structs/Alg_structs__Functor/List/: index.html
alg_structs/Alg_structs__Functor/module-type-Seed/: index.html
alg_structs/Alg_structs__Monoid/: index.html
alg_structs/Alg_structs__Monoid/Int/: index.html
alg_structs/Alg_structs__Monoid/module-type-Seed/: index.html
alg_structs/Alg_structs__Semigroup/: index.html
alg_structs/Alg_structs__Semigroup/Int/: index.html
alg_structs/Alg_structs__Semigroup/Law/: index.html
alg_structs/Alg_structs__Traversable/: index.html
alg_structs/Alg_structs__Triv/module-type-S/: index.html
alg_structs_qcheck/Alg_structs_qcheck/Functor/: index.html
alg_structs_qcheck/Alg_structs_qcheck/Monoid/: index.html
alg_structs_qcheck/Alg_structs_qcheck/Utils/: index.html
alg_structs_qcheck/Alg_structs_qcheck__/: index.html
alg_structs_qcheck/Alg_structs_qcheck__/Applicative/: index.html
alg_structs_qcheck/Alg_structs_qcheck__/Utils/: index.html
docs/alg_structs/: index.html
docs/alg_structs/Alg_structs__Applicative/: index.html
docs/alg_structs/Alg_structs__Foldable/: index.html
docs/alg_structs/Alg_structs__NonEmptyList/: index.html
docs/alg_structs/Alg_structs__Triv/: index.html
docs/alg_structs/Alg_structs__Util/: index.html
docs/alg_structs_qcheck/: index.html
lib/: alg_structs.ml  applicative.ml  applicative.mli  cata.ml  dune  foldable.ml  foldable.mli  functor.ml  functor.mli  index.mld  monoid.ml  monoid.mli  nonEmptyList.ml  nonEmptyList.mli  semigroup.ml  semigroup.mli  traversable.ml  triv.ml  util.ml
test/: dune  test.ml
(+273 files in other folders)
